XMLtoCSV/objects/unpackaged/objects/Sample_Limit_vod__c.object
<CustomObject>
    <description>Sample Limits provide the ability to define and enforce the sample quantities disbursed for a given Sample or BRC product. Limits can be defined at the Account-User, Account, or User level.  Sample Limits are supported for Person Accounts only.</description>
    <fields>
        <fullName>Account_Types_vod__c</fullName>
        <description>Defines the Person Account record type associated to the Sample Limit template. Must be a literal match of the Record Type (example: Professional_vod) and must be the non-translated value of the account Record Type</description>
        <inlineHelpText>Use Only  Person record type</inlineHelpText>
        <label>Account Types</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account for which the limit applies; Lookup to Account object; Account and/or User must be selected.  Sample Limits are supported for Person Accounts only.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Limits</relationshipLabel>
        <relationshipName>Sample_Limit_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Txn_Create_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the value is set to true the Sample Limit Transaction record will not be created and the value will then be switched to false. This field should be read-only or not visible to user that are not performing integrations or system admin functions.</description>
        <label>Disable Txn Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disbursed_Amount_vod__c</fullName>
        <description>Shows and stores the disbursed amount for the selected Product or Sample Product Group</description>
        <label>Disbursed Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursed_Quantity_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total quantity distributed for the designated product during the defined time period; Value must be a non-fractional number; Based upon sample disbursement requests created for a User and/or Account; Default value is zero.</description>
        <label>Disbursed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Date the sample limit period ends; Required field.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enforce_Limit_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the limit should be strictly enforced or if requests can exceed the defined limit quantity; Default value is checked.</description>
        <label>Enforce Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id_vod__c</fullName>
        <description>Customer designated unique identifier for the sample limit record.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Id_vod__c</fullName>
        <description>Used to search for limits to apply to a Call Report; Concatenation of Account/User/Product IDs on the sample limit record.</description>
        <externalId>true</externalId>
        <label>Group Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_Amount_vod__c</fullName>
        <description>Shows and stores the limit in value (amount) defined for the selected Product or Sample Product Group</description>
        <label>Limit Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limit_Per_Call_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether the rule applies per call or not.</description>
        <label>Limit Per Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limit_Quantity_vod__c</fullName>
        <description>Allocated quantity for the associated product for the defined time period; Value must be a positive number; Default value is zero.</description>
        <label>Limit Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which the limit applies; Lookup to Product Catalog; Only Sample and BRC products are supported; Required field.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Sample Limits</relationshipLabel>
        <relationshipName>Sample_Limit_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Amount_vod__c</fullName>
        <description>Shows and stores the remaining cost (limit amount– disbursed amount) for the selected product or promo product group</description>
        <formula>Limit_Amount_vod__c  -  Disbursed_Amount_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity_vod__c</fullName>
        <description>Available quantity remaining for the defined limit; Calculated as Limit Quantity minus Disbursed Quantity; Value can be less than zero.</description>
        <formula>Limit_Quantity_vod__c - Disbursed_Quantity_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rolling_Period_vod__c</fullName>
        <description>Defines the number of months of the rolling limit for the associated product.</description>
        <label>Rolling Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Limit_Type_vod__c</fullName>
        <description>Identifies the level at which the sample limit is applied (Account-User, Account, or User); Field value is automatically set based upon the fields populated for the sample limit record; Read-only.</description>
        <label>Sample Limit Type</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Split_Period_vod__c</fullName>
        <label>Split Period</label>
        <picklist>
            <picklistValues>
                <fullName>12Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Date the sample limit period begins.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template_Group_vod__c</fullName>
        <description>To allow customers to separate sample templates by sharing rules for profiles/user groups</description>
        <label>Template Group</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_In_Use_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag used to determine if the selected Sample Limit Template has already been used to generate a Sample Limit record.</description>
        <label>Template in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Unique_Key_vod__c</fullName>
        <label>Template Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User for which the limit applies; Lookup to User object; User and/or Account must be selected.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sample Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_vod__c</columns>
        <columns>User_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>Limit_Quantity_vod__c</columns>
        <columns>Disbursed_Quantity_vod__c</columns>
        <columns>Remaining_Quantity_vod__c</columns>
        <columns>Start_Date_vod__c</columns>
        <columns>End_Date_vod__c</columns>
        <columns>Enforce_Limit_vod__c</columns>
        <columns>Group_Id_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sample Limit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LIMIT_AMOUNT_GT_0</fullName>
        <active>true</active>
        <description>Limit Amount must be equal to or greater than 0</description>
        <errorConditionFormula>AND(NOT(ISNULL( Limit_Amount_vod__c )), Limit_Amount_vod__c  &lt; 0)</errorConditionFormula>
        <errorMessage>Record could not be saved.  Limit Amount can not be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIMIT_VALUE_GT_0</fullName>
        <active>true</active>
        <description>Limit Quantity must be greater than 0</description>
        <errorConditionFormula>AND(NOT(ISNULL(Limit_Quantity_vod__c)), Limit_Quantity_vod__c &lt; 0)</errorConditionFormula>
        <errorMessage>Record could not be saved.  Limit Quantity can not be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_SLT_Both</fullName>
        <active>true</active>
        <description>This validation rule prevents the creation of a sample limit template for both quantity and value as part of same template record.</description>
        <errorConditionFormula>AND(
NOT(ISBLANK(Account_Types_vod__c)),
NOT(ISNULL(Limit_Quantity_vod__c)), NOT(ISNULL(Limit_Amount_vod__c))
)</errorConditionFormula>
        <errorMessage>A Sample Limit Template can not be created for both quantity and value in the same template.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_User_Sample_Product_Group_vod</fullName>
        <active>true</active>
        <description>You cannot specify a user when creating limits for a sample product group.</description>
        <errorConditionFormula>IF( ISPICKVAL( Product_vod__r.Product_Type_vod__c , &apos;Sample Product Group&apos;),
NOT( ISBLANK( User_vod__c ) ) ,
false)</errorConditionFormula>
        <errorDisplayField>User_vod__c</errorDisplayField>
        <errorMessage>You cannot specify a user when creating limits for a sample product group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REQUIRE_END_DATE</fullName>
        <active>true</active>
        <description>Require a End Date</description>
        <errorConditionFormula>ISNULL(End_Date_vod__c)</errorConditionFormula>
        <errorMessage>Record could not be saved. The following fields are required: End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REQUIRE_PRODUCT</fullName>
        <active>true</active>
        <description>Require a Product</description>
        <errorConditionFormula>OR(ISNULL(Product_vod__c), ISBLANK(Product_vod__c))</errorConditionFormula>
        <errorMessage>Record could not be saved. The following fields are required: Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REQUIRE_START_DATE</fullName>
        <active>true</active>
        <description>Require a Start Date</description>
        <errorConditionFormula>ISNULL(Start_Date_vod__c)</errorConditionFormula>
        <errorMessage>Record could not be saved. The following fields are required: Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>REQUIRE_USER_OR_ACCOUNT</fullName>
        <active>true</active>
        <description>An account or user is required on the Sample Limit row.</description>
        <errorConditionFormula>AND
(
ISBLANK(Account_vod__c), 
ISBLANK(User_vod__c),
ISBLANK( Account_Types_vod__c)
)</errorConditionFormula>
        <errorMessage>Record could not be saved. The following fields are required: Account Or User Or Account Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STL_MandatoryFields</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 Account_Types_vod__c != NULL,
OR
(
Product_vod__c = NULL,
Limit_Quantity_vod__c = NULL,
Start_Date_vod__c = NULL,
End_Date_vod__c = NULL
)
)</errorConditionFormula>
        <errorMessage>Product, Limit Quantity, and Start/End Dates are mandatory if Account Type is used</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STL_NoAccount</fullName>
        <active>true</active>
        <description>Exclude account  for templates</description>
        <errorConditionFormula>AND
(
 Account_vod__c != NULL,
 Account_Types_vod__c != NULL  
)

||

AND
(
  User_vod__c  != NULL,
 Account_Types_vod__c != NULL  
)</errorConditionFormula>
        <errorMessage>Account and Account Type OR User and Account Type  can not be both set</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STL_RollingPeriod</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
Account_Types_vod__c  = NULL,
NOT( ISBLANK( Rolling_Period_vod__c))
)</errorConditionFormula>
        <errorMessage>Rolling Period  must be empty  if Account Type is empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>STM_datetime</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date_vod__c &lt; Start_Date_vod__c</errorConditionFormula>
        <errorDisplayField>End_Date_vod__c</errorDisplayField>
        <errorMessage>End Date must be greater than or equal to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SplitPeriodRolling</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
TEXT(Split_Period_vod__c) != NULL,
OR 
( 
Rolling_Period_vod__c &lt;&gt; 24, 
ISBLANK(Rolling_Period_vod__c) 
) 
)</errorConditionFormula>
        <errorDisplayField>Rolling_Period_vod__c</errorDisplayField>
        <errorMessage>if Split Period  is set rolling period must be 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SplitPeriod_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
 ISBLANK( Account_Types_vod__c) ,
 LEN( TEXT( Split_Period_vod__c ) )  &gt; 0
)</errorConditionFormula>
        <errorMessage>Split Period can not be set if Account Type is empty</errorMessage>
    </validationRules>
</CustomObject>